# shelf

./: .gitignore  README.md  README_zh.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
scripts/: package-runner.mjs
src/: app.ts  helpers.ts  i18n.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  pty_plugin.rs
src-tauri/src/commands/: ai.rs  files.rs  logs.rs  mod.rs  sessions.rs  ssh.rs  update.rs  workspace.rs
src-tauri/src/commands/ai/: history.rs  mod.rs  model_listing.rs  providers.rs  records.rs  runner.rs  shell.rs  storage.rs  types.rs
src-tauri/src/commands/ai/tools/: mod.rs  organization.rs  sessions.rs  shell.rs
src-tauri/src/session/: files.rs  mod.rs  models.rs  pi_scanner.rs  scanner.rs
src/modules/: ai-window.ts  app-constants.ts  app-state.ts  cli-launch.ts  context-menu.ts  debug-terminal.ts  dialog.ts  dragdrop.ts  file-preview.ts  files.ts  flow-control.ts  logger.ts  pickers.ts  pty-queue.ts  pty.ts  session-actions.ts  settings-panel.ts  ssh.ts  tabs.ts  terminal.ts  toast.ts  update-check.ts  utf8-splitter.ts  workspace-view.ts  workspace.ts
src/styles/: main.css
src/styles/partials/: ai-window.css  dialogs.css  foundation.css  panels.css  tabs.css  window-controls.css  workspace.css
