[package]
name = "shelf"
version = "0.2.9"
edition = "2021"

[lib]
name = "shelf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
trash = "5"
dirs = "5"
portable-pty = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
rig-core = "0.37"
thiserror = "2"
url = "2"
futures-util = "0.3"
tokio = { version = "1", features = ["io-util", "process", "time"] }
reqwest = { version = "0.13", features = ["json"] }
